Decreased tab width to fix wrapping issue.

--- a/media/css/nootabs.css
+++ b/media/css/nootabs.css
@@ -31,7 +31,7 @@ ul.nootabs-menus li {
 #galaxy-tabs li a span {
    float: right;
    font-weight: normal;
-   width: 62px;
+   width: 60px;
 }
 
 ul.nootabs-menus li a:hover {
